<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialogbkg">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_add_24"
        android:contentDescription="@string/add_new"
        android:layout_gravity="center|top"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/createText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create"
            android:textColor="@color/lavender"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/cancelButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/baseline_add_24"
            android:contentDescription="@string/add_new"
            android:scaleType="centerInside"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/upload_video"
            android:textColor="@color/lavender"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/baseline_add_24"
            android:drawablePadding="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutShorts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_short"
            android:textColor="@color/lavender"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/outline_exercise_24"
            android:drawablePadding="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutLive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="30dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/go_live"
            android:textColor="@color/lavender"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/outline_share_24"
            android:drawablePadding="16dp"/>

    </LinearLayout>

</LinearLayout>

